Attempt to fix the calculator size for monitors
I am attempting to fix the calculator button size
because they look odd when using a monitor.

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body
 
 .container 
 {
-    width: 400px;
+    width: 30%;
     height: 500px;
     background-color:darkred;
     border-radius: 10px;
@@ -53,8 +53,7 @@ body
     gap: 5px;
     justify-content: space-evenly;
     align-items: center;
-    width: 60vh;
-    height: 100vh;
+    width: 60vh
 }
 
 /** Style the calculator buttons **/
